--- a/conda/environment.yml
+++ b/conda/environment.yml
@@ -8,7 +8,7 @@ channels:
 dependencies:
   - python=3.10
   - sphinxcontrib-bibtex
-  - jupyter-book=0.13
+  - jupyter-book
   - jupytext
   - plotly
   - pandas
